--- a/MATLAB/polyphase channelizer/README
+++ b/MATLAB/polyphase channelizer/README
@@ -1,1 +1,9 @@
-THIS CODE COVERS: [Digital Receivers and Transmitters Using Polyphase Filter Banks for Wireless Communications](https://pdfs.semanticscholar.org/28f3/8afa6199fb7c950b59924833ec1f34144ecf.pdf)
+THIS CODE COVERS    : Digital Receivers and Transmitters Using Polyphase Filter Banks for Wireless Communications
+
+PDF of Paper        : https://pdfs.semanticscholar.org/28f3/8afa6199fb7c950b59924833ec1f34144ecf.pdf)
+
+![Alt text](/img1.png?raw=true "Block Diagram")
+
+![Alt text](/img2.png?raw=true "Frequency domain channels (Red) with signals (Blue)")
+
+![Alt text](/img3.png?raw=true "Received Filtered Signals From each bank")
